Updated about page, fixed flickering padding issue.

--- a/src/styling/AboutPage.module.css
+++ b/src/styling/AboutPage.module.css
@@ -64,9 +64,12 @@
   /*Styling for the test in the intro paragraphs on the "About" page.*/
   .introParagraphs {
     max-width: 100vw;
+    width: 62vw;
     height: 100%;
     padding: 6vh 4vw;
+    line-height: 1.4 !important;
     color: #19062a;
+    white-space: no-wrap;
     font:
       1.64rem 'Segoe UI',
       sans-serif;
@@ -110,14 +113,94 @@
   transition: 0.5s;
 }
 
+/*Styling for the C# word on the About page.*/
+.cSharpText {
+  color: #ffffff;
+  background-color: #953dac;
+  padding: 0rem 0.4rem;
+  border-radius: 0.3rem;
+  transition: 0.5s;
+}
+
+/*Styling for the SwiftUI word on the About page.*/
+.swiftUIText {
+  color: #000000;
+  background-color: #0092fd;
+  padding: 0rem 0.4rem;
+  border-radius: 0.3rem;
+  transition: 0.5s;
+}
+
+/*Styling for the SwiftUI word on the About page.*/
+.javaText {
+  color: #ca3132;
+  background-color: #ffffff;
+  padding: 0rem 0.4rem;
+  border-radius: 0.3rem;
+  transition: 0.5s;
+}
+
+/*Styling for the SwiftUI word on the About page.*/
+.pythonText {
+  color: #ffe468;
+  background-color: #356f9f;
+  padding: 0rem 0.4rem;
+  border-radius: 0.3rem;
+  transition: 0.5s;
+}
+
 /*Styling for the Vue.js word on the About page.*/
 .vueJSText:hover {
   color: #35495e;
   background-color: #42b883;
+  padding: 0rem 0.11rem;
+  border-radius: 0.3rem;
+  font:
+    1.8rem 'Segoe UI',
+    sans-serif;
+}
+
+/*Styling for the C# word on the About page.*/
+.cSharpText:hover {
+  color: #953dac;
+  background-color: #ffffff;
   padding: 0rem 0.3rem;
   border-radius: 0.3rem;
   font:
-    3.5vh 'Segoe UI',
+    1.8rem 'Segoe UI',
+    sans-serif;
+}
+
+/*Styling for the SwiftUI word on the About page.*/
+.swiftUIText:hover {
+  color: #0092fd;
+  background-color: #000000;
+  padding: 0rem 0.15rem;
+  border-radius: 0.3rem;
+  font:
+    1.8rem 'Segoe UI',
+    sans-serif;
+}
+
+/*Styling for the SwiftUI word on the About page.*/
+.javaText:hover {
+  color: #ffffff;
+  background-color: #ca3132;
+  padding: 0rem 0.26rem;
+  border-radius: 0.3rem;
+  font:
+    1.8rem 'Segoe UI',
+    sans-serif;
+}
+
+/*Styling for the SwiftUI word on the About page.*/
+.pythonText:hover {
+  color: #356f9f;
+  background-color: #ffe468;
+  padding: 0rem 0.16rem;
+  border-radius: 0.3rem;
+  font:
+    1.8rem 'Segoe UI',
     sans-serif;
 }
 
@@ -125,9 +208,9 @@
 .reactText:hover {
   color: #23272f;
   background-color: #00dcff;
-  padding: 0rem 0.4rem;
+  padding: 0rem 0.2rem;
   border-radius: 0.3rem;
   font:
-    3.5vh 'Segoe UI',
+    1.8rem 'Segoe UI',
     sans-serif;
 }
